:bug: Enhance news card alignment and height in section 3 for improved layout on mobile

--- a/css/responsive/index.css
+++ b/css/responsive/index.css
@@ -121,4 +121,10 @@
     section:nth-of-type(1) .slide>div {
         padding: 15px;
     }
+
+    /* Section 3 */
+    section:nth-of-type(3)>div>#news>.news-card {
+        align-items: flex-start;
+        height: fit-content;
+    }
 }
